# I2C_Demo

./: README.md
I2C_Demo/: .autotools  .cproject  .gitignore  .project  AUTHORS  I2C_Demo_gdb_arm-fslc-linux-gnueabi.launch  INSTALL  Makefile  Makefile.in  README  aclocal.m4  arm-fslc-linux-gnueabi-libtool  config.h  config.status  configure  configure.ac
I2C_Demo/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
I2C_Demo/src/: .gitignore  FXOS8700CQ.h  I2C_Demo  I2C_Demo.c  Makefile  Makefile.am  Makefile.in  smbus.c  smbus.h
I2C_Demo/src/.deps/: I2C_Demo-I2C_Demo.Po  I2C_Demo-smbus.Po
